--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase": "^11.7.1",
     "firebase-admin": "^13.4.0",
     "firestore": "^1.1.6",
-    "git": "^0.1.5"
+    "fs": "^0.0.1-security",
+    "git": "^0.1.5",
+    "openai": "^4.102.0",
+    "sharp": "^0.34.2"
   }
 }
