--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,11 +14,14 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "firebase": "^11.7.1",
     "firebase-admin": "^13.4.0",
     "firestore": "^1.1.6",
+    "formdata": "^0.10.4",
     "fs": "^0.0.1-security",
     "git": "^0.1.5",
+    "node-fetch": "^3.3.2",
     "openai": "^4.102.0",
     "sharp": "^0.34.2"
   }
