--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "git": "^0.1.5",
     "node-fetch": "^3.3.2",
     "openai": "^4.102.0",
+    "path": "^0.12.7",
     "sharp": "^0.34.2"
   }
 }
